--- a/src/resources/views/error.hbs
+++ b/src/resources/views/error.hbs
@@ -4,8 +4,8 @@
     <div>
         <p>{{message}}</p>
 
-        {{#if stack}}
+        {{!-- {{#if stack}}
         <pre>{{stack}}</pre>
-        {{/if}}
+        {{/if}} --}}
     </div>
 </div>
